--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -263,12 +263,12 @@ cart-items {
 
 .cart-progress__widget {
   background-color: #fcf0f3;
-  padding: 3.8rem 2.8rem 3.4rem 2.8rem;
+  padding: 3.8rem 1.4rem 3.4rem 1.4rem;
 }
 
 .cart-progress__track-wrapper {
   position: relative;
-  width: 100%;
+  margin: 0 45px;
   height: 12px;
 }
 
